"공유컬렉션 - service, repository 작성 (+test)"