@@ -32,10 +32,9 @@ public class SharedCollectionService {
     @Transactional
     public void createSharedCollection(SharedCollectionRequest sharedCollectionRequest, Long userId) {
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new CustomException(""));
+                .orElseThrow(() -> new CustomException("사용자를 찾을 수 없습니다."));
         SharedCollection collection = sharedCollectionRequest.toEntity();
-        sharedCollectionRepository.save(collection);
-        // sharedCollectionRepository.flush();
+        collection = sharedCollectionRepository.save(collection);
 
         SharedUser sharedUser = SharedUser.create(user, collection, Role.OWNER);
         sharedUserRepository.save(sharedUser);
@@ -45,12 +44,13 @@ public class SharedCollectionService {
     @Transactional(readOnly = true)
     public List<SharedCollectionResponse> getSharedCollection(Long userId) {
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new CustomException(""));
+                .orElseThrow(() -> new CustomException("사용자를 찾을 수 없습니다."));
 
         List<SharedUser> sharedUsers = sharedUserRepository.findByUser(user);
+
         List<SharedCollection> collections = sharedUsers.stream()
                 .map(SharedUser::getSharedCollection)
-                .collect(Collectors.toList());
+                .toList();
 
         return collections.stream()
                 .map(collection -> SharedCollectionResponse.of(collection.getId(), collection.getName()))
@@ -60,22 +60,18 @@ public class SharedCollectionService {
     // 공유컬렉션 수정 - 이름
     // 예외 1. 이름을 바꾸려 하는 사용자와 컬렉션의 id가 일치하는지
     @Transactional
-    public SharedCollectionResponse updateSharedCollection(SharedCollectionRequest sharedCollectionRequest, Long userId, Long sharedCollectionId) {
+    public SharedCollectionResponse updateSharedCollection(SharedCollectionRequest sharedCollectionRequest, Long userId, Long collectionId) {
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new CustomException(""));
+                .orElseThrow(() -> new CustomException("사용자를 찾을 수 없습니다."));
 
-        SharedCollection collection = sharedCollectionRepository.findById(sharedCollectionId)
-                .orElseThrow(() -> new CustomException(""));
+        SharedCollection collection = sharedCollectionRepository.findById(collectionId)
+                .orElseThrow(() -> new CustomException("컬렉션을 찾을 수 없습니다."));
 
         SharedUser sharedUser = sharedUserRepository.findByUserAndSharedCollection(user, collection)
-                .orElseThrow(() -> new CustomException(""));
-
-        if (!sharedUser.getUser().getId().equals(userId)) {
-            throw new CustomException("");
-        }
+                .orElseThrow(() -> new CustomException("해당 컬렉션의 멤버가 아닙니다."));
 
         if(!sharedUser.getRole().equals(Role.OWNER)) {
-            throw new CustomException("");
+            throw new CustomException("해당 권한은 방장만 가능합니다.");
         }
 
         collection.updateName(sharedCollectionRequest.getName());
@@ -88,19 +84,19 @@ public class SharedCollectionService {
     @Transactional
     public void deleteSharedCollection(Long userId, Long collectionId) {
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new CustomException(""));
+                .orElseThrow(() -> new CustomException("사용자를 찾을 수 없습니다."));
 
         SharedCollection collection = sharedCollectionRepository.findById(collectionId)
-                .orElseThrow(() -> new CustomException(""));
+                .orElseThrow(() -> new CustomException("컬렉션을 찾을 수 없습니다."));
 
         SharedUser sharedUser = sharedUserRepository.findByUserAndSharedCollection(user, collection)
-                .orElseThrow(() -> new CustomException(""));
+                .orElseThrow(() -> new CustomException("해당 컬렉션의 멤버가 아닙니다."));
 
         if (!sharedUser.getRole().equals(Role.OWNER)) {
-            throw new CustomException("");
+            throw new CustomException("해당 권한은 방장만 가능합니다.");
         }
         sharedCollectionRepository.delete(collection);
-        sharedUserRepository.deleteByCollection(collection);
+        sharedUserRepository.deleteAllBySharedCollection(collection);
     }
 
 
@@ -109,14 +105,18 @@ public class SharedCollectionService {
     // 예외 1 : 이미 초대한 멤버를 또 초대하려고 할 때
     @Transactional
     public void inviteNewMember(Long userId, Long collectionId) {
-        User user = userRepository.findById(userId).orElseThrow(() -> new CustomException(""));
+        // 초대를 받은 유저 확인
+        User invitedUser = userRepository.findById(userId)
+                .orElseThrow(() -> new CustomException("사용자를 찾을 수 없습니다."));
+        // 초대한 공유컬렉션 확인
         SharedCollection collection = sharedCollectionRepository.findById(collectionId)
-                .orElseThrow(() -> new CustomException(""));
-        List<SharedUser> sharedUsers = sharedUserRepository.findBySharedCollection(collection);
-        if(sharedUsers.stream().anyMatch(sharedUser -> !sharedUser.getUser().getId().equals(userId))) {
-            throw new CustomException("");
+                .orElseThrow(() -> new CustomException("컬렉션을 찾을 수 없습니다."));
+        // 컬렉션에 있는 멤버인지 확인
+        if (sharedUserRepository.findByUserAndSharedCollection(invitedUser, collection).isPresent()) {
+            throw new CustomException("이미 초대된 유저입니다.");
         }
-        SharedUser newSharedUser = SharedUser.create(user, collection, Role.MEMBER);
+
+        SharedUser newSharedUser = SharedUser.create(invitedUser, collection, Role.MEMBER);
         sharedUserRepository.save(newSharedUser);
     }
 
@@ -126,25 +126,28 @@ public class SharedCollectionService {
     // 예외 2 - 컬렉션 멤버가 아닌 사용자를 추방하려고 할 때
     @Transactional
     public void ejectMember(Long userId, Long collectionId, Long ejectedUserId) {
+        // 존재하는 컬렉션인지 확인
         SharedCollection collection = sharedCollectionRepository.findById(collectionId)
-                .orElseThrow(() -> new CustomException(""));
+                .orElseThrow(() -> new CustomException("컬렉션을 찾을 수 없습니다."));
 
+        // 방장 유저와 강퇴될 유저 확인
         User ownerUser = userRepository.findById(userId)
-                .orElseThrow(() -> new CustomException(""));
+                .orElseThrow(() -> new CustomException("사용자를 찾을 수 없습니다."));
         User ejectedUser = userRepository.findById(ejectedUserId)
-                .orElseThrow(() -> new CustomException(""));
+                .orElseThrow(() -> new CustomException("사용자를 찾을 수 없습니다."));
 
+        // 방장이 해당 컬렉션에 있고, OWNER인지 확인
         SharedUser ownerSharedUser = sharedUserRepository.findByUserAndSharedCollection(ownerUser, collection)
-                .orElseThrow(() -> new CustomException(""));
-
+                .orElseThrow(() -> new CustomException("해당 컬렉션의 멤버가 아닙니다."));
         if (!ownerSharedUser.getRole().equals(Role.OWNER)) {
-            throw new CustomException("");
+            throw new CustomException("해당 권한은 방장만 가능합니다.");
         }
 
+        // 강퇴될 멤버가 해당 컬렉션에 있고, MEMBER인지 확인
         SharedUser ejectedSharedUser = sharedUserRepository.findByUserAndSharedCollection(ejectedUser, collection)
-                .orElseThrow(() -> new CustomException(""));
+                .orElseThrow(() -> new CustomException("해당 컬렉션의 멤버가 아닙니다."));
         if (!ejectedSharedUser.getRole().equals(Role.MEMBER)) {
-            throw new CustomException("");
+            throw new CustomException("컬렉션의 멤버만 강퇴할 수 있습니다.");
         }
 
         sharedUserRepository.delete(ejectedSharedUser);
